# aurora-ai

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  docsestrutura-de-precos-implementacao-municip  estrutura-de-precos-implementacao.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  medical_validation.md
.github/workflows/: cd.yml  ci-frontend.yml  ci-python.yml  security-scan.yml  security.yml
dashboard/: app.py
dashboard/pages/: 01-monitoramento.py  02-triagem.py
database/: schema.sql  vector_setup.py
database/migrations/: 001_initial_schema.sql
docs/: api.md
docs/project/: architecture.md  business-model.md  custos-variaveis.md  estrutura-de-custos.md  estrutura-de-precos-implementacao-municipios.md  implementacao-ano-1.md  sustentabilidade.md
docs/project/compliance/: auditoria-interna.md  backup-e-recuperacao.md  engenharia-de-usabilidade.md  gestao-de-riscos.md  indicadores-de-conformidade.md  lgpd-compliance.md  medidas-de-seguranca.md  plano-de-seguranca.md  revisao-do-programa.md  security-protocols.md
docs/projects/: plano-expansao-3-anos.md
infrastructure/docker/: Dockerfile.secure
infrastructure/kubernetes/base/: deployment.yaml
online-version/: English_Teacher_Whisper.ipynb
webrtc/: server.js
webrtc/client/: estrutura-basica.md  index.html
